Fixed a number of typos pointed by the reviewers.

--- a/paper/jalangi.bib
+++ b/paper/jalangi.bib
@@ -1,6 +1,6 @@
 @inproceedings{SBGKfse13,
     author={Koushik Sen and Swaroop Kalasapur and Tasneem Brutch and Simon Gibbs},
-    title={Jalangi: A Selective Record-Replay and Dynamic Analysis Framework for JavaScript},
+    title={Jalangi: A Selective Record-Replay and Dynamic Analysis Framework for {JavaScript}},
     booktitle= {ESEC/FSE'13},
     month = {August},
     year= 2013,
@@ -9,7 +9,7 @@
 
 @inproceedings{Mickens:2010:MDC:1855711.1855722,
  author = {Mickens, James and Elson, Jeremy and Howell, Jon},
- title = {Mugshot: deterministic capture and replay for Javascript applications},
+ title = {Mugshot: deterministic capture and replay for {JavaScript} applications},
  booktitle = {7th USENIX conference on Networked systems design and implementation},
  series = {NSDI'10},
  year = {2010},
@@ -19,7 +19,7 @@
 
 @inproceedings{Richards:2011:ACJ:2048066.2048119,
  author = {Richards, Gregor and Gal, Andreas and Eich, Brendan and Vitek, Jan},
- title = {Automated construction of JavaScript benchmarks},
+ title = {Automated construction of {JavaScript} benchmarks},
  booktitle = {ACM international conference on Object oriented programming systems languages and applications},
  series = {OOPSLA '11},
  year = {2011},
@@ -29,7 +29,7 @@
 
 @inproceedings{Richards:2010:ADB:1806596.1806598,
  author = {Richards, Gregor and Lebresne, Sylvain and Burg, Brian and Vitek, Jan},
- title = {An analysis of the dynamic behavior of JavaScript programs},
+ title = {An analysis of the dynamic behavior of {JavaScript} programs},
  booktitle = {ACM SIGPLAN conference on Programming language design and implementation},
  series = {PLDI '10},
  year = {2010},
@@ -68,7 +68,7 @@
 
 @inproceedings{Yu:2007:JIB:1190216.1190252,
  author = {Yu, Dachuan and Chander, Ajay and Islam, Nayeem and Serikov, Igor},
- title = {JavaScript instrumentation for browser security},
+ title = {{JavaScript} instrumentation for browser security},
  booktitle = {ACM symposium on Principles of programming languages},
  series = {POPL '07},
  year = {2007},
@@ -77,7 +77,7 @@
 
 @inproceedings{Saxena:2010:SEF:1849417.1849985,
  author = {Saxena, Prateek and Akhawe, Devdatta and Hanna, Steve and Mao, Feng and McCamant, Stephen and Song, Dawn},
- title = {A Symbolic Execution Framework for JavaScript},
+ title = {A Symbolic Execution Framework for {JavaScript}},
  booktitle = {Proceedings of the 2010 IEEE Symposium on Security and Privacy},
  series = {SP '10},
  year = {2010},
@@ -170,7 +170,7 @@
 
 @inproceedings{blended,
  author = {Wei, Shiyi},
- title = {Blended analysis for JavaScript: a practical framework to analyze dynamic features},
+ title = {Blended analysis for {JavaScript}: a practical framework to analyze dynamic features},
  booktitle = {Proceedings of the 3rd annual conference on Systems, programming, and applications: software for humanity},
  series = {SPLASH '12},
  year = {2012},
@@ -180,7 +180,7 @@
 
 @inproceedings{Ratanaworabhan:2010:JCB:1863166.1863169,
  author = {Ratanaworabhan, Paruj and Livshits, Benjamin and Zorn, Benjamin G.},
- title = {JSMeter: comparing the behavior of JavaScript benchmarks with real web applications},
+ title = {JSMeter: comparing the behavior of {JavaScript} benchmarks with real web applications},
  booktitle = {Proceedings of the 2010 USENIX conference on Web application development},
  series = {WebApps'10},
  year = {2010},
@@ -209,7 +209,7 @@
 
 @inproceedings{manuicse13,
  author = {Asger Feldthaus and Max Schaefer and Manu Sridharan and Julian Dolby and Frank Tip},
- title = {Efficient Construction of Approximate Call Graphs for JavaScript IDE Services},
+ title = {Efficient Construction of Approximate Call Graphs for {JavaScript} {IDE} Services},
  booktitle = {International Conference on Software Engineering},
  series = {ICSE '13},
  year = {2013},
@@ -311,7 +311,7 @@ month           = "June",
 
 @TechReport{Wei:2012:BAJ:2384716.2384758,
   author = 	 {Wei, Shiyi and Ryder, Barbara G.},
-  title = 	 {A Practical Blended Analysis for Dynamic Features in JavaScript},
+  title = 	 {A Practical Blended Analysis for Dynamic Features in {JavaScript}},
   institution =  {Department of Computer Science, Virginia Tech.},
   year = 	 {2012},
   key = 	 {TR-12-18},
@@ -328,7 +328,7 @@ month           = "June",
 
 @inproceedings{Mesbah:2009:IAT:1555001.1555037,
  author = {Mesbah, Ali and van Deursen, Arie},
- title = {Invariant-based automatic testing of AJAX user interfaces},
+ title = {Invariant-based automatic testing of {AJAX} user interfaces},
  booktitle = {31st International Conference on Software Engineering},
  series = {ICSE '09},
  year = {2009},
